Add TopUp and start endpoints
