# api.yaml
@@ -252,6 +252,95 @@ Resources:
                  requestTemplates:
                    application/json: "{\"statusCode\": 200}"
                  type: "mock"
+          /request:
+             post:
+               summary: Post a request
+               requestBody:
+                 description: Optional description in *Markdown*
+                 required: true
+                 content:
+                   application/json:
+                     schema:
+                       $ref: '#/definitions/CardRequest'
+                   application/x-www-form-urlencoded:
+                     schema:
+                       $ref: '#/definitions/CardRequest'
+
+               produces:
+               - "application/json"
+               parameters:
+               - name: "op"
+                 in: "path"
+                 required: true
+                 type: "string"
+               - name: "val1"
+                 in: "query"
+                 required: true
+                 type: "string"
+               - name: "val2"
+                 in: "query"
+                 required: true
+                 type: "string"
+               - name: "Accept-Language"
+                 in: "header"
+                 required: false
+                 type: "string"
+               responses:
+                 '200':
+                   description: "200 response"
+                   schema:
+                     $ref: "#/definitions/CalculationResult"
+                   headers:
+                     Cache-Control:
+                       type: "string"
+                     Access-Control-Allow-Origin:
+                       type: "string"
+               x-amazon-apigateway-integration:
+                 uri:
+                   !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ApiLambdaFunction.Arn}/invocations"
+                 responses:
+                   default:
+                     statusCode: "200"
+                     responseParameters:
+                       method.response.header.Access-Control-Allow-Origin: "'*'"
+                 passthroughBehavior: "when_no_match"
+                 httpMethod: "POST"
+                 cacheKeyParameters:
+                 - "method.request.path.op"
+                 - "method.request.querystring.val1"
+                 - "method.request.querystring.val2"
+                 - "method.request.header.Accept-Language"
+                 contentHandling: "CONVERT_TO_TEXT"
+                 type: "aws_proxy"
+             options:
+               produces:
+               - "application/json"
+               responses:
+                 '200':
+                   description: "200 response"
+                   schema:
+                     $ref: "#/definitions/Empty"
+                   headers:
+                     Cache-Control:
+                       type: "string"
+                     Access-Control-Allow-Origin:
+                       type: "string"
+                     Access-Control-Allow-Methods:
+                       type: "string"
+                     Access-Control-Allow-Headers:
+                       type: "string"
+               x-amazon-apigateway-integration:
+                 responses:
+                   default:
+                     statusCode: "200"
+                     responseParameters:
+                       method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+                       method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,X-Audience,x-audience'"
+                       method.response.header.Access-Control-Allow-Origin: "'*'"
+                 passthroughBehavior: "when_no_match"
+                 requestTemplates:
+                   application/json: "{\"statusCode\": 200}"
+                 type: "mock"
         definitions:
           Empty:
             type: "object"
@@ -352,10 +441,12 @@ Resources:
                 type: "number"
               cardId:
                 type: "number"
-              movemenType:
+              movementType:
                 type: "string"
               amount:
                 type: "number"
+              description:
+                type: "string"
               ts:
                 type: "string"
             description: "Money movement"
@@ -367,6 +458,7 @@ Resources:
             - "vendorId"
             - "amount"
             - "captured"
+            - "refunded"
             - "description"
             - "ts"
             properties:
@@ -380,6 +472,30 @@ Resources:
                 type: "number"
               captured:
                 type: "number"
+              refunded:
+                type: "number"
+              description:
+                type: "string"
               ts:
                 type: "string"
-            description: "Money movement"
+            description: "Authorisation"
+          CardRequest:
+            type: "object"
+            required:
+            - "cardId"
+            - "vendorId"
+            - "amount"
+            - "description"
+            - "requestType"
+            properties:
+              cardId:
+                type: "number"
+              requestType:
+                type: "string"
+              vendorId:
+                type: "number"
+              amount:
+                type: "number"
+              description:
+                type: "string"
+            description: "Card Request"
